--- a/U02NebenlaeufigkeitThreads/.project
+++ b/U02NebenlaeufigkeitThreads/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>U04EinfuehrungThreads</name>
+	<name>U02NebenlaeufigkeitThreads</name>
 	<comment></comment>
 	<projects>
 	</projects>
